--- a/sample-facebook-api/index.html
+++ b/sample-facebook-api/index.html
@@ -16,7 +16,7 @@
                 <button class="button dh" id="cmdWipe">Wipe tokens</button>
                 <button class="button dh" id="cmdPost">Post</button>
                 <button class="button dh" id="cmdGetFeed">Get feed</button>
-                <button class="button dh" id="cmdDelete">Revoke permisions</button>
+                <button class="button dh" id="cmdDelete">Revoke permissions</button>
                 <button class="button dh" id="cmdClearLog">Clear log</button>
 			</div>
 			<div class="result-area ch30">
