--- a/sample-facebook-api/index.html
+++ b/sample-facebook-api/index.html
@@ -30,7 +30,7 @@
 			<div>Cordova API Samples</div>
 		</footer>
         <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-        <script type="text/javascript" charset="utf-8" src="scripts/jquery.js"></script>
+        <script type="text/javascript" charset="utf-8" src="scripts/jquery.min.js"></script>
         <script type="text/javascript" charset="utf-8" src="scripts/jso.js"></script>
         <script type="text/javascript" charset="utf-8" src="scripts/main.js"></script>
 	</body>
